<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>moveit_whole_body_ik</name>
  <version>0.5.18</version>
  <description>Non-chain inverse kinematics solver for MoveIt!</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/moveit_whole_body_ik</url>
  <url type="butracker">https://github.com/davetcoleman/moveit_whole_body_ik/issues</url>
  <url type="repository">https://github.com/davetcoleman/moveit_whole_body_ik/</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>moveit_visual_tools</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_visual_tools</run_depend>

  <export>
    <moveit_core plugin="${prefix}/simple_kdl_kinematics_plugin_description.xml"/>
  </export>

</package>
